Corrected Tabs alignment and Popup style rule handling

--- a/Popup/Popup.less
+++ b/Popup/Popup.less
@@ -15,13 +15,13 @@
 		// .position(0);
 		box-sizing: border-box;
 		background-color: @agate-popup-bg-color;
-		border-radius: @agate-popup-border-radius;
 		padding: @agate-popup-padding;
+		border: 0 solid transparent;
+		border-width: @agate-popup-border-width;
+		border-color: @agate-popup-border-color;
+		border-radius: @agate-popup-border-radius;
 
 		&:not(.withTitle) {
-			border: @agate-popup-body-border-width solid transparent;
-			border-color: @agate-popup-body-border-color;
-
 			.body {
 				color: @agate-popup-plain-body-color;
 			}
