--- a/styles/colors-carbon.less
+++ b/styles/colors-carbon.less
@@ -79,11 +79,10 @@
 // ---------------------------------------
 @agate-popup-plain-body-color: @agate-accent;
 @agate-popup-bg-color: fade(black, 85%);
+@agate-popup-border-color: @agate-accent;
 @agate-popup-shadow: none;
-@agate-popup-body-border-width: 1px;
 @agate-popup-body-border-color: @agate-highlight transparent;
 @agate-popup-body-bg-color: @agate-background-active;
-@agate-popup-body-border-radius: 0;
 
 // SliderButton
 // ---------------------------------------
