--- a/styles/colors-titanium.less
+++ b/styles/colors-titanium.less
@@ -79,6 +79,7 @@
 // ---------------------------------------
 @agate-popup-plain-body-color: @agate-text-color;
 @agate-popup-bg-color: @agate-bg-color;
+@agate-popup-border-color: @agate-accent;
 @agate-popup-shadow: 0 3px 9px fade(black, 30%);
 @agate-popup-body-border-color: @agate-accent;
 @agate-popup-body-bg-color: fade(black, 5%);
