--- a/styles/variables-carbon.less
+++ b/styles/variables-carbon.less
@@ -55,7 +55,6 @@
 @agate-item-height: 24px;
 @agate-item-side-outset: 12px;
 @agate-item-side-outset: 12px;
-
 @agate-item-height: 60px;
 @agate-item-height-large: 72px;
 @agate-item-vertical-padding: 3px;
@@ -74,6 +73,7 @@
 // ---------------------------------------
 @agate-popup-min-width: 100%;
 @agate-popup-max-width: 100%;
+@agate-popup-border-width: 1px 0;
 @agate-popup-border-radius: 0;
 @agate-popup-padding: (@agate-component-spacing * 4) @agate-component-spacing;
 @agate-popup-title-padding: 0 (@agate-button-small-height) 0 0;
