--- a/styles/variables-titanium.less
+++ b/styles/variables-titanium.less
@@ -74,6 +74,7 @@
 // ---------------------------------------
 @agate-popup-min-width: 510px;
 @agate-popup-max-width: 70%;
+@agate-popup-border-width: 1px;
 @agate-popup-border-radius: 3px;
 @agate-popup-padding: (@agate-component-spacing * 2);
 @agate-popup-title-padding: 0 0 0 (@agate-button-small-height);
